--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "phpunit/php-invoker": "^1.1"
     },
     "autoload": {
-        "psr-4": {"Piskvor\\": "src/"}
+        "psr-4": {
+          "Piskvor\\": "src/",
+          "Piskvor\\Test\\": "tests/"
+        }
     }
 
 }
