--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "piskvor/game-of-life",
     "type": "project",
+    "version": "0.2.0",
     "license": "MIT",
     "authors": [
         {
